酒和酒庄图片评论分页

--- a/app/views/themes/waterfall/comments/_comment_list.html.erb
+++ b/app/views/themes/waterfall/comments/_comment_list.html.erb
@@ -41,11 +41,16 @@
 		</li>
 		<% end %>
 		</ul>
+		 <div class="pagination">
+             <%= paginate @comments %>
+          </div>
+
+
 		<% else %>
 		<p>暂时没有评论...</p>
 		<% end %>
 		<div class="clear"></div>
-		
+		   
 		<div class="comment_post_star mt30">
 			<%= render "comments/share/form" %>
 		</div>
