--- a/public/template/album_comment_detail.html
+++ b/public/template/album_comment_detail.html
@@ -91,8 +91,8 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
             <div class="comment">
        	  <div class="mb20 clearfix">
                 <div class="title">
-                <a href="#01" class="btn_gray float_r"><span>添加评论</span></a>
-                <h3>评论</h3>
+                <a href="album_photo_detail.html" class="btn_gray float_r"><span>返回</span></a>
+                <h3>查看回复</h3>
                 </div>
               </div>
                <ul class="comment_list">
@@ -103,51 +103,88 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                             <div class="content">好诱人的咖喱啊，我也好想吃！</div>
                         </div>
                     </li>
-                   <li>
-                    	<div class="userpic"><a href="#"><img src="images/userimage/1.jpg" width="50" height="50" alt="username" /></a></div>
-                        <div class="main">
-                        	<div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
-                            <div class="content">好诱人的咖喱啊，我也好想吃！</div>
-                            <p><a href="album_comment_detail.html">回复(10)</a> | <a href="#">删除</a></p>
-                        </div>
-                 </li>
-                    <li>
-                    	<div class="userpic"><a href="#"><img src="images/userimage/1.jpg" width="50" height="50" alt="username" /></a></div>
-                        <div class="main">
-                        	<div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
-                            <div class="content">
-                            <!--<p class="reply">好诱人的咖喱啊，我也好想吃！</p>-->
-                            好诱人的咖喱啊，我也好想吃！</div>
-                        </div>
-                    </li>
-                    <li>
-                    	<div class="userpic"><a href="#"><img src="images/userimage/1.jpg" width="50" height="50" alt="username" /></a></div>
-                        <div class="main">
-                        	<div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
-                            <div class="content">好诱人的咖喱啊，我也好想吃！</div>
-                        </div>
-                    </li>
-                    <li>
-                    	<div class="userpic"><a href="#"><img src="images/userimage/1.jpg" width="50" height="50" alt="username" /></a></div>
-                        <div class="main">
-                        	<div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
-                            <div class="content">好诱人的咖喱啊，我也好想吃！</div>
-                        </div>
-                    </li>
                     <div class="clear"></div>
               </ul>
-                <div class="comment_post_star mt30">
-                <a name="01" id="01"></a>
-                        <div class="userpic"><a href="#"><img src="images/userimage/1.jpg" width="50" height="50" alt="username" /></a></div>
-                            <div class="post_main">
-                              <div class="post">
-                                  <textarea class="mb10" name="" cols="" rows=""></textarea>
-                              </div>
-                              <a href="#" class="btn_gray float_l mr10"><span>加上去</span></a><div class="com_s">同时发布到：<a href="#"><span class="sns_on"><img src="images/icon/r_g.png" width="14" height="14" /></span><img src="images/icon/sina_s_on.png" alt="新浪" width="17" height="17" align="absmiddle" /></a><a href="#"><span class="sns_on"><img src="images/icon/r_g.png" width="14" height="14" /></span><img src="images/icon/tencen_s_on.png" alt="腾讯" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/douban_s_off.png" alt="豆瓣" width="17" height="17" align="absmiddle" /></a></div>
-                          </div>
-                             <div class="clear"></div>
+              <div class="reply">
+            <div class="tabs">
+                  <ul>
+                    <li class="current"><a href="#">站内回复</a></li>
+                    <li><a href="#">站外回复</a></li>
+                  </ul>
               </div>
-        </div>
+              <ul class="reply_list clearfix">
+                <li>
+                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
+                    <div class="main">
+                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span><span class="sns">来自新浪微博</span></div>
+                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
+                    </div>
+                </li>
+                <li>
+                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
+                    <div class="main">
+                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span><span class="sns">来自新浪微博</span></div>
+                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
+                    </div>
+                </li>
+                <li>
+                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
+                    <div class="main">
+                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span><span class="sns">来自新浪微博</span></div>
+                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
+                    </div>
+                </li>
+                <li>
+                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
+                    <div class="main">
+                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span><span class="sns">来自新浪微博</span></div>
+                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
+                    </div>
+                </li>
+                <li>
+                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
+                    <div class="main">
+                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span><span class="sns">来自新浪微博</span></div>
+                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
+                    </div>
+                </li>
+                <li>
+                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
+                    <div class="main">
+                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span><span class="sns">来自新浪微博</span></div>
+                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
+                    </div>
+                </li>
+                <li>
+                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
+                    <div class="main">
+                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
+                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
+                    </div>
+                </li>
+                <li>
+                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
+                    <div class="main">
+                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
+                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
+                    </div>
+                </li>
+                <li>
+                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
+                    <div class="main">
+                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
+                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
+                    </div>
+                </li>
+                <div class="clear"></div>
+            </ul>
+            <div class="post clearfix">
+              <textarea name="" cols="" rows=""></textarea>
+                <p><a href="#" class="btn_gray"><span>回复</span></a></p>
+          </div>
+                <div class="clear"></div>
+                </div>
+          </div>
         </div>
         <div class="album_right pt60 pl30">
        	  <h2>我的其他相册</h2>
