--- a/public/template/event_detail.html
+++ b/public/template/event_detail.html
@@ -133,7 +133,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
               </div>
               <div class="section event_wine">
                 <div class="title">
-           	      <h2>活动参与者<span class="font12 more"><a href="winery_photo_list.html">（24人参与 | 58人感兴趣）</a></span></h2></div>
+           	      <h2>活动参与者<span class="font12 more"><a href="event_join_list.html">（24人参与 | 58人感兴趣）</a></span></h2></div>
                     <div class="content">
                     	<ul class="event_people">
                           <li><a href="myiwine.html"><img src="images/userimage/03.jpg" width="50" height="50" alt="username" /></a></li>
@@ -152,21 +152,21 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                     </div>
               </div>
                 <div class="section">
-                	<div class="title"><h2>活动照片<span class="font12 more"><a href="winery_photo_list.html">（共12张...）</a></span></h2></div>
+                	<div class="title"><h2>活动照片<span class="font12 more"><a href="event_photo_list.html">（共12张...）</a></span></h2></div>
                     <div class="content">
                     	<ul class="event_pic">
-                        	<li><a href="winery_photo_detail.html"><img src="images/test/winery_pic_130_1.jpg" width="130" height="98" alt="blablabla" /></a></li>
-                            <li><a href="#"><img src="images/test/winery_pic_130_2.jpg" width="130" height="130" alt="blablabla" /></a></li>
-                            <li><a href="#"><img src="images/test/winery_pic_130_3.jpg" width="130" height="87" alt="blablabla" /></a></li>
-                            <li class="last"><a href="#"><img src="images/test/winery_pic_130_4.jpg" width="130" height="87" alt="blablabla" /></a></li>
+                        	<li><a href="event_photo_detail.html"><img src="images/test/winery_pic_130_1.jpg" width="130" height="98" alt="blablabla" /></a></li>
+                            <li><a href="event_photo_detail.html"><img src="images/test/winery_pic_130_2.jpg" width="130" height="130" alt="blablabla" /></a></li>
+                            <li><a href="event_photo_detail.html"><img src="images/test/winery_pic_130_3.jpg" width="130" height="87" alt="blablabla" /></a></li>
+                            <li class="last"><a href="event_photo_detail.html"><img src="images/test/winery_pic_130_4.jpg" width="130" height="87" alt="blablabla" /></a></li>
                         </ul>
                         <div class="clear"></div>
                     </div>
                 </div>
                 
                 <div class="section last">
-                	<div class="title"><a href="#01" class="btn_gray float_r font12"><span>我要留言</span></a>
-                <h2>留言 <span class="font12 more"><a href="winery_comment_list.html"></a></span></h2></div>
+                	<div class="title"><a href="event_comment_list.html" class="btn_gray float_r font12"><span>我要留言</span></a>
+              <h2>留言 <span class="font12 more"><a href="event_comment_list.html">（共10条）</a></span></h2></div>
                     <div class="content">
                     	<ul class="comment_list">
                 	<li>
@@ -181,24 +181,11 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                         <div class="main">
                         	<div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
                             <div class="content">这个活动有意思，周末要抽空去看一下，哈哈～</div>
-                            <p><a href="#">回复</a> | <a href="#">删除</a></p>
+                            <p><a href="event_comment_detail.html">回复(3)</a> | <a href="#">删除</a></p>
                         </div>
                  </li>
                     <div class="clear"></div>
               </ul>
-              <div class="comment_post_star mt30">
-                <a name="01" id="01"></a>
-                  <div class="evaluate">
-                    <a href="#" class="btn_gray"><span>加上去</span></a>
-                </div>
-                        <div class="userpic"><a href="#"><img src="images/userimage/2.jpg" width="50" height="50" alt="username" /></a></div>
-                            <div class="post_main">
-                              <div class="post">
-                                  <textarea class="mb10" name="" cols="" rows=""></textarea>
-                              </div>
-                          </div>
-                             <div class="clear"></div>
-              </div>
                     </div>
                 </div>
             </div>
