--- a/public/template/stylesheets/event.css
+++ b/public/template/stylesheets/event.css
@@ -101,3 +101,8 @@ input.photo_name, textarea.photo_des {width:184px;}
 textarea.photo_des {min-height: 70px;} 
 li.photo_des p {margin: 0 0 5px 0;} 
 
+.photolist li {width:130px;float:left;margin-right:20px;}
+.photolist li.last {margin-right:0;}
+.photolist {width:590px;float:left;margin-bottom:20px;}
+.photolist li {width:130px;float:left;margin:0 8px;_margin: 0 7px;}
+.photolist li img {margin-bottom:5px;}
