--- a/app/views/themes/waterfall/friends/sync.html.erb
+++ b/app/views/themes/waterfall/friends/sync.html.erb
@@ -30,26 +30,25 @@
 <script type="text/javascript">
   <% if params[:success] %>
     var href = parent.$('iframe').attr('src');
-    alert(href);
     var patt_weibo = new RegExp("weibo");
     var patt_qq = new RegExp("qq");
     var patt_douban = new RegExp('douban');
     if (patt_weibo.test(href)){
-      parent.$('.share_weibo_checkbox').attr({checked: 'checked', style: 'display:inline'});
-      parent.$('.share_weibo_image').attr('src', '/assets/waterfall/images/icon/icon_sina.gif');
+      parent.$('.share_weibo input').removeAttr('disabled');
+      parent.$('.share_weibo a').attr({href: 'javascript:void(0);', class: ''});
+      parent.$('.share_weibo .sns_on').toggle();
+      parent.$('.share_weibo_image').attr({src: '/assets/waterfall/images/icon/weibo_s_on.png', class: 'image_on'});
     }else if (patt_qq.test(href)){
-      parent.$('.share_qq_checkbox').attr({checked: 'checked', style: 'display:inline'});
-      parent.$('.share_qq_image').attr('src', '/assets/waterfall/images/icon/icon_qq.gif');
+      parent.$('.share_qq input').removeAttr('disabled');
+      parent.$('.share_qq a').attr({href: 'javascript:void(0);', class: ''});
+      parent.$('.share_qq .sns_on').toggle();
+      parent.$('.share_qq_image').attr({src: '/assets/waterfall/images/icon/tencen_s_on.png', class: 'image_on'});
     }else if (patt_douban.test(href)){
-      parent.$('.share_douban_checkbox').attr({checked: 'checked', style: 'display:inline'});
-      parent.$('.share_douban_image').attr('src', '/assets/waterfall/images/common/icon_douban_on.png');
+      parent.$('.share_douban input').removeAttr('disabled');
+      parent.$('.share_douban a').attr({href: 'javascript:void(0);', class: ''});
+      parent.$('.share_douban .sns_on').toggle();
+      parent.$('.share_douban_image').attr({src: '/assets/waterfall/images/icon/douban_s_on.png', class: 'image_on'});
     }
     parent.$.fancybox.close();
   <% end %>
-  //  parent.$.fancybox({
-  //   beforeClose:function() {
-  //     check_oauth_checkbox($(this)[0]['href']);
-  //   }
-  // });
-   // parent.$.fancybox.close();
 </script>
