--- a/public/template/wine_photo_detail.html
+++ b/public/template/wine_photo_detail.html
@@ -116,7 +116,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                               <div class="post">
                                   <textarea class="mb10" name="" cols="" rows=""></textarea>
                               </div>
-                              <a href="#" class="btn_gray float_l mr10"><span>加上去</span></a><div class="com_s">同时发布到：<a href="#"><img src="images/icon/sina_s_on.png" alt="新浪" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/tencen_s_on.png" alt="腾讯" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/douban_s_off.png" alt="豆瓣" width="17" height="17" align="absmiddle" /></a></div>
+                              <a href="#" class="btn_gray float_l mr10"><span>加上去</span></a><div class="com_s">同时发布到：<a href="#"><span class="sns_on"><img src="images/icon/r_g.png" width="14" height="14" /></span><img src="images/icon/sina_s_on.png" alt="新浪" width="17" height="17" align="absmiddle" /></a><a href="#"><span class="sns_on"><img src="images/icon/r_g.png" width="14" height="14" /></span><img src="images/icon/tencen_s_on.png" alt="腾讯" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/douban_s_off.png" alt="豆瓣" width="17" height="17" align="absmiddle" /></a></div>
                           </div>
                              <div class="clear"></div>
               </div>
