--- a/app/assets/themes/waterfall/stylesheets/wine.css
+++ b/app/assets/themes/waterfall/stylesheets/wine.css
@@ -45,11 +45,6 @@ h1.wine_name_en {font-size:14px;color:#666;font-weight:normal;margin: 0 0 20px 0
 .pro_score table th.year {width:70px;}
 .pro_score table td.critic {text-align:left;}
 .pro_score table td {border-bottom:1px solid #ccc;padding:2px;font-size:11px;text-align:center;}
-.sort {margin-bottom:20px;}
-.sort span {display:block;float:left;padding:2px 10px;background-color:#f3f3f3; border-radius: 10px 10px 10px 10px;margin-right:5px;}
-.sort span.current {background-color:#ffcc33;color:#333;}
-.sort span a {color:#666;}
-.sort span a:hover {color:#333;text-decoration:none;}
 .wine_pic li {width:130px;float:left;margin-right:20px;}
 .wine_pic li.last {margin-right:0;}
 .wine_pic_list {width:590px;float:left;margin-bottom:20px;}
@@ -73,11 +68,15 @@ ul.photo_list li .intro, .album_left .photo .intro{margin:0 0 5px 0;}
 .content .album_right {width:210px;float:left;}
 .album_left .pre_next {text-align:center;}
 .album_left .count {display:inline-block;margin:0 10px;}
-.album_left .info {margin-bottom:15px;color:#666;}
+.album_left .info {margin-bottom:30px;color:#666;}
 .album_left .photo {text-align:center;margin-bottom:20px;background-color:#f3f3f3;}
 .album_left .comment_list .main {width:520px;}
-.album_left .post_main {width:410px;}
-.album_left .post_main textarea {width:390px;height:80px;background-color:#fff;}
+.album_left .comment .title {border-bottom:1px solid #cccccc;padding-bottom:15px;}
+.album_left .post_main {width:470px;}
+.album_left .post_main textarea {width:490px;height:80px;background-color:#fff;}
+.post_main .com_s {flaot:left;width:300px;padding-top:3px;}
+.post_main .com_s a {display:inline-block;margin-right:10px;position:relative;}
+.com_s .sns_on {position:absolute;left:8px;top:8px;}
 .album_right h2 {margin:0 0 20px 0;}
 img.cover_s {background:url(../images/bg/bg_album_s.gif) no-repeat left top;padding:5px 8px 8px 5px;margin:0 0 5px 0;}
 .side_album_list li {margin:0 0 30px 0;}
