--- a/app/views/themes/waterfall/comments/_comment_form.html.erb
+++ b/app/views/themes/waterfall/comments/_comment_form.html.erb
@@ -26,13 +26,14 @@
     <p class="label">简短评论: </p>
     <%= f.text_area :body,  :rows => 10, :cols => 25 %>
   </div>
-  <div class="share relative">
-      <%= link_to "javascript:void(0)", :class => "btn_gray float_r do_#{comment.do}_button" do  %>
-        <span>保存</span>
-      <% end %>
-      
+  <div class="share relative clearfix">
+    <%= link_to "javascript:void(0)", :class => "btn_gray float_r do_#{comment.do}_button" do  %>
+      <span>保存</span>
+    <% end %>
+    <div class="sh">
       分享到<%= f.check_box :is_share, :checked => current_user.profile.config.share.wine_simple_comment.to_i == 1 %> 广播
-
+    </div>
+    <div class="com_s float_l"><%= render "comments/share/comment_sns" %></div>
   </div>
   <span class="red text_error" style="display: block; float: right; margin-right: 20px"></span>
 <% end -%>
