--- a/public/template/guide_step1.html
+++ b/public/template/guide_step1.html
@@ -58,7 +58,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                             <div class="right">
                                 <div class="avatar">
                                     <p class="mb10">您上传的头像会自动生成以下三种尺寸，<br /> 
-                                    请确保中小尺寸的头像是否清晰。</p>
+                                    请确保中小尺寸的头像是否清晰。哈哈哈</p>
                                     <p class="sample"><img src="images/common/userpic_sample130.jpg" width="130" height="130" /> <span>大图 130*130px</span></p>
                                     <p class="sample"><img src="images/common/userpic_sample50.jpg" width="50" height="50" /> <span>中图 50*50px</span></p>
                                     <p class="sample"><img src="images/common/userpic_sample30.jpg" width="30" height="30" /> <span>小图 30*30px</span></p>  
