增加跳过按钮

--- a/public/template/guide_step1.html
+++ b/public/template/guide_step1.html
@@ -71,7 +71,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                 </div>
                 <div class="bot"></div>
           </div>
-            <div class="align_c mt20"><a class="mr20" href="guide_step2.html"><img src="images/common/btn_next.jpg" alt="下一步" width="176" height="51" /></a></div>
+            <div class="align_c mt20"><a class="mr20" href="guide_step2.html"><img src="images/common/btn_next.jpg" alt="下一步" width="176" height="51" /></a><a href="guide_step2.html"><img src="images/common/skip.jpg" alt="跳过" width="176" height="51" /></a></div>
         </div>
     </div>
 </body>
