--- a/app/views/themes/waterfall/comments/_comments.html.erb
+++ b/app/views/themes/waterfall/comments/_comments.html.erb
@@ -33,8 +33,7 @@
 					<%= link_to  vote_comment_path(comment.id), :remote => true, :class => "ajax vote"  do %>
 		                有用(<span class="likes_count"><%=comment.votes_count %></span>)
 		             <% end %>
-					| 
-                    <%=  reply_comment(comment) %>
+					|  <%= comment_detail_url(comment) %>
 				</div>
 				
 				<div id="reply_comment_<%= comment.id %>" class="replybox" style="display: none">
