--- a/app/views/themes/waterfall/comments/share/_photo_comment_form.html.erb
+++ b/app/views/themes/waterfall/comments/share/_photo_comment_form.html.erb
@@ -16,7 +16,7 @@
 			</div>
 			<span class="red text_error"></span>
 			<a href="javascript:void(0)" class="btn_gray float_l mr10"><span>加上去</span></a>
-			<%= render "comments/share/comment_sns" %>
+			<div class="com_s"><%= render "comments/share/comment_sns" %></div>
 		</div>
 		<div class="clear"></div>
 	<% end %>
