--- a/public/template/wine_photo_comment_detail.html
+++ b/public/template/wine_photo_comment_detail.html
@@ -45,123 +45,126 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
     <div id="wrapper950">
         <div id="wp_left">
         	<div class="wp_space_line top">
-            	<a href="wine_profile.html" class="btn_gray float_r"><span>返回</span></a><a href="wine_profile.html" class="btn_gray float_r mr5"><span>上传照片</span></a>
+            	<a href="wine_profile.html" class="btn_gray float_r"><span>返回</span></a>
+                <a href="wine_profile.html" class="btn_gray float_r mr5"><span>上传照片</span></a>
                 <h1 class="wine_name_ch">2005 波特米勒站赤霞珠干红葡萄酒的照片</h1>
                 <div class="clear"></div>
             </div>
-                <div class="wp_space_line ptb30">
+            <div class="wp_space_line ptb30">
                 <div class="album_left">
-            <div class="mb20">
-                <div class="pre_next"><span class="off"><a class="btn_gray mr5"><span>前一张</span></a></span><span class="count">1 / 25</span> <a href="#" class="btn_gray"><span>后一张</span></a></div>
-            </div>
-            <div class="photo">
-                <img src="images/test/wine.jpg" width="164" height="610" alt="photo" />
-            </div>
-              <div class="info clearfix">
-            	<div class="like float_r"><a href="#" class="icon_like">赞 (3)</a></div>
-                <div class="share float_r">分享到：<a href=" #"><img src="images/icon/sina_s_on.png" alt="新浪" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/tencen_s_on.png" alt="腾讯" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/douban_s_on.png" alt="豆瓣" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/kaixin_s_on.png" alt="开心网" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/renren_s_on.png" alt="人人网" width="17" height="17" align="absmiddle" /></a> |</div>
-                <div>10浏览 | 4评论</div>
-            </div>
-            <div class="comment">
-       	    <div class="mb20 clearfix">
-                <div class="title">
-                <a href="wine_photo_detail.html" class="btn_gray float_r"><span>返回</span></a>
-                <h3>评论</h3>
-                </div>
-              </div>
-              <ul class="comment_list">
-                	<li>
-                    	<div class="userpic"><a href="#"><img src="images/userimage/1.jpg" width="50" height="50" alt="username" /></a></div>
-                        <div class="main">
-                        	<div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
-                            <div class="content">好诱人的咖喱啊，我也好想吃！</div>
+                    <div class="mb20">
+                        <div class="pre_next">
+                            <span class="off"><a class="btn_gray mr5"><span>前一张</span></a></span><span class="count">1 / 25</span> <a href="#" class="btn_gray"><span>后一张</span></a>
                         </div>
-                    </li>
-                    <div class="clear"></div>
-              </ul>
-              <div class="reply">
-            <div class="tabs">
-                  <ul>
-                    <li class="current"><a href="#">站内回复</a></li>
-                    <li><a href="#">站外回复</a></li>
-                  </ul>
-              </div>
-              <ul class="reply_list clearfix">
-                <li>
-                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
-                    <div class="main">
-                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span><span class="sns">来自新浪微博</span></div>
-                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
                     </div>
-                </li>
-                <li>
-                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
-                    <div class="main">
-                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span><span class="sns">来自新浪微博</span></div>
-                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
+                    <div class="photo">
+                         <img src="images/test/wine.jpg" width="164" height="610" alt="photo" />
                     </div>
-                </li>
-                <li>
-                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
-                    <div class="main">
-                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span><span class="sns">来自新浪微博</span></div>
-                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
+                    <div class="info clearfix">
+                    	<div class="like float_r"><a href="#" class="icon_like">赞 (3)</a></div>
+                        <div class="share float_r">分享到：<a href=" #"><img src="images/icon/sina_s_on.png" alt="新浪" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/tencen_s_on.png" alt="腾讯" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/douban_s_on.png" alt="豆瓣" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/kaixin_s_on.png" alt="开心网" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/renren_s_on.png" alt="人人网" width="17" height="17" align="absmiddle" /></a> |</div>
+                        <div>10浏览 | 4评论</div>
                     </div>
-                </li>
-                <li>
-                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
-                    <div class="main">
-                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span><span class="sns">来自新浪微博</span></div>
-                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
+                     <div class="comment">
+               	        <div class="mb20 clearfix">
+                             <div class="title">
+                                 <a href="wine_photo_detail.html" class="btn_gray float_r"><span>返回</span></a>
+                                 <h3>评论</h3>
+                             </div>
+                        </div>
+                        <ul class="comment_list">
+                        	<li>
+                            	<div class="userpic"><a href="#"><img src="images/userimage/1.jpg" width="50" height="50" alt="username" /></a></div>
+                                <div class="main">
+                                	<div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
+                                    <div class="content">好诱人的咖喱啊，我也好想吃！</div>
+                                </div>
+                            </li>
+                            <div class="clear"></div>
+                        </ul>
+                        <div class="reply">
+                            <div class="tabs">
+                                  <ul>
+                                    <li class="current"><a href="#">站内回复</a></li>
+                                    <li><a href="#">站外回复</a></li>
+                                  </ul>
+                            </div>
+                            <ul class="reply_list clearfix">
+                                <li>
+                                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
+                                    <div class="main">
+                                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span><span class="sns">来自新浪微博</span></div>
+                                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
+                                    <div class="main">
+                                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span><span class="sns">来自新浪微博</span></div>
+                                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
+                                    <div class="main">
+                                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span><span class="sns">来自新浪微博</span></div>
+                                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
+                                    <div class="main">
+                                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span><span class="sns">来自新浪微博</span></div>
+                                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
+                                    <div class="main">
+                                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span><span class="sns">来自新浪微博</span></div>
+                                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
+                                    <div class="main">
+                                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span><span class="sns">来自新浪微博</span></div>
+                                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
+                                    <div class="main">
+                                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
+                                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
+                                    <div class="main">
+                                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
+                                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
+                                    <div class="main">
+                                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
+                                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
+                                    </div>
+                                </li>
+                                <div class="clear"></div>
+                            </ul>
+                            <div class="post clearfix">
+                              <textarea name="" cols="" rows=""></textarea>
+                                <p><a href="#" class="btn_gray"><span>回复</span></a></p>
+                            </div>
+                            <div class="clear"></div>
+                        </div>
                     </div>
-                </li>
-                <li>
-                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
-                    <div class="main">
-                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span><span class="sns">来自新浪微博</span></div>
-                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
-                    </div>
-                </li>
-                <li>
-                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
-                    <div class="main">
-                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span><span class="sns">来自新浪微博</span></div>
-                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
-                    </div>
-                </li>
-                <li>
-                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
-                    <div class="main">
-                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
-                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
-                    </div>
-                </li>
-                <li>
-                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
-                    <div class="main">
-                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
-                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
-                    </div>
-                </li>
-                <li>
-                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
-                    <div class="main">
-                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
-                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
-                    </div>
-                </li>
-                <div class="clear"></div>
-            </ul>
-            <div class="post clearfix">
-              <textarea name="" cols="" rows=""></textarea>
-                <p><a href="#" class="btn_gray"><span>回复</span></a></p>
-          </div>
-                <div class="clear"></div>
-              </div>
-            </div>
                 </div>
             </div>
-          </div>
+        </div>
         <div id="wp_right">
           <div class="wp_count clearfix">
           <a href="wine_follower_list.html">1234<br/>关注</a><a href="wine_owner_list.html">1234<br/>拥有</a><a href="wine_comment_list.html">1234<br/>评论</a><a href="wine_testnotes_list.html">1234<br/>品酒辞</a><a href="wine_photo_list.html">1234<br/>照片</a>
