--- a/app/views/themes/waterfall/event_wines/new.html.erb
+++ b/app/views/themes/waterfall/event_wines/new.html.erb
@@ -8,7 +8,14 @@
 <% end %>
 <div class="whitespace addwine">
   <%= form_for [@event, @event_wine] do |f| -%>
-    <%= f.hidden_field :wine_detail_ids, :id => 'wine_detail_ids' %> 
+    <% if @event.wines.present? %>
+      <%= f.hidden_field :wine_detail_ids, 
+        :id => 'wine_detail_ids', 
+        :value => @event.wines.collect{|wine| wine.wine_detail_id}.join(",") %> 
+    <% else %>
+      <%= f.hidden_field :wine_detail_ids, 
+        :id => 'wine_detail_ids' %> 
+    <% end %>
   <% end -%>
   <h1 class="main_title">添加活动用酒</h1>
   <div class="search mb20" id="search_input_view">
@@ -26,11 +33,13 @@
     <!--end mb30-->
   </div>
   <div id="result_container">
-
+    <div class="select_result"></div>
+    <div class="clear"></div>
+    <div class="search_result"></div>
   </div>
   <script type="text/template" id="search_wine_list_template">
     <div class="search_result_space">
-      <p class="notice_b search_result_notice"  style="display: none">我们为您搜寻到以下酒款</p>
+      <p class="notice_b search_result_notice" >搜索结果:</p>
       <div id="warning" class="red" style="display: none"></div>
       <div class="clear"></div>
       <div class="wines">
@@ -42,9 +51,9 @@
   <script type="text/template" id="select_wine_list_template">
     <div class="wine_select_container">
       <p class="notice_b mb20">已选择的活动用酒：</p>
-      <div class="wines">您还没有选择活动用酒</div>
+      <div class="wines  wine_select" style="overflow: auto">您还没有选择活动用酒</div>
       <div class="btn_submit " style="display: none" >
-        <a href="javascript:void(0)" class="btn_bluesky_s mr10 save_button">
+        <a click="$('#new_event_wine').submit()" href="javascript:void(0)" class="btn_bluesky_s mr10 save_button">
           <span>保存</span>
         </a>
         <%= link_to edit_event_path(@event), :class => :btn_gray_b  do %>
@@ -77,8 +86,6 @@
     </div>
   </script>
   <script type="text/template" id="select_wine_template">
-  <div class="wine_select">
-    <dl>
       <dt>
         <a href="#">
           <span class="delet remove"></span>
@@ -91,12 +98,20 @@
         <h2><@= year @><@= name_zh @></h2>
         <h3><@= year @><@= origin_name @></h3>
       </dd>
-    </dl>
-    <div class="clear"></div>
-  </div>
   </script>
 
   
   <!--end whitespace-->
 </div>
+<script language="javascript" type="text/javascript">
+  $(document).ready(function(){
+      // SelectWineListView = new app.SelectWineListView ({collection: window.app.SelectWines, wines:window.app.SearchWines});
+      <% if @old_event.wines.present? %>
+      // $("#result_container").append(app.SelectWineListView.render().el);
+        <% @old_event.wines.each do |event_wine| %>
+          app.SelectWineListView.collection.add(<%= event_wine.wine_detail.custom_to_json.to_json.html_safe  %>);
+        <% end %>
+      <% end %>
+      });
+</script>
 
