完善评论同步到第三方并更换豆瓣，人人，新浪等的app_key

--- a/app/views/themes/waterfall/friends/setting_sns.html.erb
+++ b/app/views/themes/waterfall/friends/setting_sns.html.erb
@@ -73,6 +73,6 @@
 </div>
 <script type="text/javascript">
   <% if params[:failure] %>
-    parent.$.fancybox({content:'同步失败'});
+    parent.$.fancybox.close();
   <% end %>
-</script>
+ </script> 
